--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <!--FontAwesome-->
+    <script src="https://kit.fontawesome.com/3fce74ea87.js" crossorigin="anonymous"></script>
     <!--Bootstrap 5-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
@@ -32,7 +34,7 @@
                 <a class="nav-link" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Youtube</a>
+                <a class="nav-link" href="https://www.youtube.com/channel/UCgwv5tR9ek51M2Geg6noUCg">Youtube</a>
               </li>
             </ul>
           </div>
@@ -45,17 +47,31 @@
               <h1>Making beats while putting America juice in freedom planes</h1>
               <hr>
               <p>Small-time music producer living in the United Kingdom, serving in the United States Airforce</p>
-              <a href="#"><button>Check Out my Music!</button></a>
+              <a href="https://www.youtube.com/channel/UCgwv5tR9ek51M2Geg6noUCg" target="_blank"><button>Check Out my Music!</button></a>
             </div>
             <div class="col-lg-6 col-12 land-img-box">
-              <img src="./media/rodger2.png" alt="">
+              <img src="./media/rodger-cut.png" alt="">
             </div>
         </div>
+        <div class="row">
+          <div class="col-12 wave">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+              <path fill="#4CC9F0" fill-opacity="1" d="M0,128L60,133.3C120,139,240,149,360,181.3C480,213,600,267,720,240C840,213,960,107,1080,64C1200,21,1320,43,1380,53.3L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
+            </svg>
+          </div>
+        </div>
         <div id="feature" class="row">
+          <div class=" col-lg-6 col-12">
+            <h1>Check out my latest track!</h1>
+            <h2>Released December 2020</h2>
+          </div>
           <div class=" col-lg-6 col-12">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/O8G-9Z5hXQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
       </div>
+      <footer>
+        <a href="https://twitter.com/KlariBeats" target="_blank"><i class="fab fa-twitter"></i></a>
+      </footer>
 </body>
 </html>
