--- a/about.html
+++ b/about.html
@@ -15,23 +15,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <!--Main Stylesheet-->
     <link rel="stylesheet" href="styles.css">
-    <title>Klaribeats</title>
+    <title>About Klaribeats</title>
 </head>
 <body>
     <!--Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Klaribeats</a>
+          <a class="navbar-brand" href="index.html">Klaribeats</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link active" href="#">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="https://www.youtube.com/channel/UCgwv5tR9ek51M2Geg6noUCg" target="_blank">Youtube</a>
@@ -42,32 +42,25 @@
       </nav>
       <!--Content-->
       <div class="container-fluid">
-        <div id="landing" class="row">
-            <div class="col-lg-6 col-12">
-              <h1>Making beats while putting America juice in freedom planes</h1>
-              <hr>
-              <p>Small-time music producer in the United Kingdom, serving in the United States Airforce</p>
-              <a class="btn-link" href="https://www.youtube.com/channel/UCgwv5tR9ek51M2Geg6noUCg" target="_blank"><button>Check Out my Music!</button></a>
+        <div id="about" class="row">
+            <div class="col-lg-6 col-12 about-img-box">
+                <img src="./media/rodger-about.png" alt="">
             </div>
-            <div class="col-lg-6 col-12 land-img-box">
-              <img src="./media/rodger-cut.png" alt="">
+            <div class="col-lg-6 col-12">
+                <h1>About</h1>
+                <hr>
+                <p>I'm new to making my own beats, and I like to learn as I go. I'm currently enlisted in the United States Airforce, 
+                stationed in England. Stay tuned for new releases that I post regularly on my YouTube channel, and tell me what you think!</p>
+                <a class="btn-link" href="https://www.youtube.com/channel/UCgwv5tR9ek51M2Geg6noUCg" target="_blank"><button>Youtube</button></a>
+                <a class="btn-link" href="https://twitter.com/KlariBeats" target="_blank"><button>Twitter</button></a>
             </div>
         </div>
         <div class="row">
-          <div class="col-12 wave">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-              <path fill="#4CC9F0" fill-opacity="1" d="M0,128L60,133.3C120,139,240,149,360,181.3C480,213,600,267,720,240C840,213,960,107,1080,64C1200,21,1320,43,1380,53.3L1440,64L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
-            </svg>
-          </div>
-        </div>
-        <div id="feature" class="row">
-          <div class=" col-lg-6 col-12">
-            <h1>Check out my latest track!</h1>
-            <h2>Released December 2020</h2>
-          </div>
-          <div class=" col-lg-6 col-12">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/O8G-9Z5hXQU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
+            <div class="col-12 wave">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                    <path fill="#4cc9f0" fill-opacity="1" d="M0,192L80,186.7C160,181,320,171,480,181.3C640,192,800,224,960,245.3C1120,267,1280,277,1360,282.7L1440,288L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path>
+                  </svg>
+            </div>
         </div>
       </div>
       <footer>
