--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
             <div class="col-lg-6 col-12 about-img-box">
                 <img src="./media/rodger-about.png" alt="">
             </div>
-            <div class="col-lg-6 col-12">
+            <div class="col-lg-6 col-12 about-text">
                 <h1>About</h1>
                 <hr>
                 <p>I'm new to making my own beats, and I like to learn as I go. I'm currently enlisted in the United States Airforce, 
